# KitcatDB

./: CMakeLists.txt  LICENSE  README.md
docs/: api.md
include/: hash-table.h  node.h
src/: hash-table.c  main.c  node.c
